# Astro_game

./: .gitignore  CMakeLists.txt  README.md
headers/: myapp.h  optionframe.h  settingDialog.h
src/: myapp.cpp  optionframe.cpp  settingdialog.cpp
